--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Märt Helmoja</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,6 +50,12 @@
     <header>
         <h1>Märt Helmoja</h1>
         <h2>Curriculum Vitae</h2>
+
+        <div class="image">
+
+                <img src="images/1.jpg" alt="1">
+
+            </div>
     </header>
     <section class="contact-info">
         <p><strong>Address:</strong> Tallinn</p>
@@ -89,5 +96,7 @@
             </ul>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
