add cv-Märt Helmoja files

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <header>
-        <h1>Märt Helmoja</h1>
+         <!-- <h1>Märt Helmoja</h1> -->
         <h2>Curriculum Vitae</h2>
 
         <div class="image">
@@ -59,8 +59,9 @@
     </header>
     <section class="contact-info">
         <p><strong>Address:</strong> Tallinn</p>
-        <p><strong>Phone number:</strong> 57784566</p>
-        <p><strong>Email:</strong> mida@iganes.ee</p>
+        <!-- <p><strong>Phone number:</strong> 57784566</p> -->
+        <!-- <p><strong>Email:</strong> mida@iganes.ee</p> -->
+         <!-- <p><strong>Age:</strong> 21</p> -->
     </section>
     <div class="section">
         <h2>About me</h2>
@@ -96,7 +97,11 @@
             </ul>
         </div>
     </footer>
-
+    <span id="name"></span>
+    <span id="age"></span>
+    <span id="phoneNumber"></span>
+    
     <script src="app.js"></script>
+    <script src="profile.js"></script>
 </body>
 </html>
