--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <!-- <p><strong>Phone number:</strong> 57784566</p> -->
         <!-- <p><strong>Email:</strong> mida@iganes.ee</p> -->
          <!-- <p><strong>Age:</strong> 21</p> -->
+         <span id="name"></span>
+         <span id="age"></span>
+         <span id="phoneNumber"></span>
     </section>
     <div class="section">
         <h2>About me</h2>
@@ -93,7 +96,7 @@
             <ul class="social-media-list">
                 <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-uom7kN6VFlpJwG0n5o1w4o2zJIQ7EvC+qJ3f7+bWNsTb+XbExK+3kSbn63Bt9p1rL9CYaZDa3PzqHzHzcdMaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             </ul>
         </div>
     </footer>
